remove public into dist

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Belajar Tailwind</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="dist/css/style.css">
     </head>
 
     <body>
@@ -80,7 +80,7 @@
                     <div class="w-full px-10 lg:w-1/2">
                         <div class="mt-5 relative lg:mt-9 lg:mr-0">
                             <img
-                                src="/public/img/Leo_Christian-removebg-preview (1).png"
+                                src="dist/img/Leo_Christian-removebg-preview (1).png"
                                 alt="Leo"
                                 class="min-w-full mx-auto">
                             <span
@@ -170,7 +170,7 @@
                 <div class="w-full px-4 flex flex-wrap justify-center">
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-xl shadow-md overflow-hidden">
-                            <img src="/public/img/adago.png" alt="adago" width="w-full" height="200">
+                            <img src="dist/img/adago.png" alt="adago" width="w-full" height="200">
                         </div>
                         <h3 class="font-semibold text-xl text-dark mt-5 mb-3 hover:text-primary">
                             <a href="https://play.google.com/store/apps/details?id=com.adaro.adago" target="_blank">AdaGo</a>
@@ -182,7 +182,7 @@
                     </div>
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-xl shadow-md overflow-hidden">
-                            <img src="/public/img/officein.png" alt="officein" width="w-full">
+                            <img src="dist/img/officein.png" alt="officein" width="w-full">
                         </div>
                         <h3 class="font-semibold text-xl text-dark mt-5 mb-3 hover:text-primary">
                             <a href="https://play.google.com/store/apps/details?id=id.aqi.office_in" target="_blank">OfficeIn</a>
@@ -191,7 +191,7 @@
                     </div>
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-xl shadow-md overflow-hidden">
-                            <img src="/public/img/sehat-indo.png" alt="officein" width="w-full">
+                            <img src="dist/img/sehat-indo.png" alt="officein" width="w-full">
                         </div>
                         <h3 class="font-semibold text-xl text-dark mt-5 mb-3 hover:text-primary">
                             <a href="https://play.google.com/store/apps/details?id=com.dto.sehatindonesiaku" target="_blank">Sehat Indonesiaku</a>
@@ -202,7 +202,7 @@
                     </div>
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-xl shadow-md overflow-hidden">
-                            <img src="/public/img/speaky.png" alt="officein" width="w-full">
+                            <img src="dist/img/speaky.png" alt="officein" width="w-full">
                         </div>
                         <h3 class="font-semibold text-xl text-dark mt-5 mb-3 hover:text-primary">
                             <a href="https://play.google.com/store/apps/details?id=id.app.speaky" target="_blank">Speaky</a>
@@ -211,7 +211,7 @@
                     </div>
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-xl shadow-md overflow-hidden">
-                            <img src="/public/img/symbolicid.png" alt="officein" width="w-full">
+                            <img src="dist/img/symbolicid.png" alt="officein" width="w-full">
                         </div>
                         <h3 class="font-semibold text-xl text-dark mt-5 mb-3 hover:text-primary">
                             <a href="https://symbolic.id" target="_blank">SymbolicID</a>
@@ -320,7 +320,7 @@
                 </div>
             </div>
          </footer>
-    <script src="/public/js/script.js"></script>
+    <script src="dist/js/script.js"></script>
     </body>
 
 </html>
